--- a/TravelBook/Base.lproj/Main.storyboard
+++ b/TravelBook/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,49 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TravelBook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="00D-86-m0v">
+                                <rect key="frame" x="0.0" y="244" width="414" height="618"/>
+                            </mapView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dZ4-Ox-4TG">
+                                <rect key="frame" x="115" y="97" width="184" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="comment" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4lD-ct-Xvc">
+                                <rect key="frame" x="115" y="157" width="184" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1k1-wD-WmH"/>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="leading" secondItem="4lD-ct-Xvc" secondAttribute="leading" id="2H5-vd-hNn"/>
+                            <constraint firstItem="00D-86-m0v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="82a-LT-OU8"/>
+                            <constraint firstItem="00D-86-m0v" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Ks3-IV-vcI"/>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="trailing" secondItem="4lD-ct-Xvc" secondAttribute="trailing" id="Mxk-EQ-xXm"/>
+                            <constraint firstItem="00D-86-m0v" firstAttribute="top" secondItem="4lD-ct-Xvc" secondAttribute="bottom" constant="53" id="QCe-7o-yra"/>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="53" id="aBb-fy-5ay"/>
+                            <constraint firstItem="4lD-ct-Xvc" firstAttribute="top" secondItem="dZ4-Ox-4TG" secondAttribute="bottom" constant="26" id="cAz-a9-Lwv"/>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="dsj-fx-Ge4"/>
+                            <constraint firstItem="4lD-ct-Xvc" firstAttribute="centerX" secondItem="00D-86-m0v" secondAttribute="centerX" id="myH-5x-ItZ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="commentText" destination="4lD-ct-Xvc" id="EHy-zg-VBa"/>
+                        <outlet property="mapView" destination="00D-86-m0v" id="elF-AC-pWT"/>
+                        <outlet property="nameText" destination="dZ4-Ox-4TG" id="SiA-YA-d1e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
     </scenes>
 </document>
