--- a/TravelBook/Base.lproj/Main.storyboard
+++ b/TravelBook/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="me8-mG-sXT">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -7,6 +7,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--List View Controller-->
+        <scene sceneID="XyU-lK-gOx">
+            <objects>
+                <tableViewController id="tlg-kM-BA9" customClass="ListViewController" customModule="TravelBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Ctk-Uo-Cy8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dBW-Dx-tEl">
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dBW-Dx-tEl" id="xZM-Cf-vWz">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="tlg-kM-BA9" id="CaW-5e-ghM"/>
+                            <outlet property="delegate" destination="tlg-kM-BA9" id="ipZ-QJ-8ct"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="fd3-Zh-sij"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="toSecondVC" id="YU4-nh-fj4"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="26Z-iR-TU9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="297.10144927536237" y="84.375"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -16,34 +48,48 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="00D-86-m0v">
-                                <rect key="frame" x="0.0" y="244" width="414" height="618"/>
+                                <rect key="frame" x="0.0" y="288" width="414" height="501"/>
                             </mapView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dZ4-Ox-4TG">
-                                <rect key="frame" x="115" y="97" width="184" height="34"/>
+                                <rect key="frame" x="115" y="141" width="184" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="comment" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4lD-ct-Xvc">
-                                <rect key="frame" x="115" y="157" width="184" height="34"/>
+                                <rect key="frame" x="115" y="201" width="184" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TLp-Nb-DoJ">
+                                <rect key="frame" x="170" y="816" width="75" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="R5Q-mL-ghT"/>
+                                </constraints>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0X6-hh-6p8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1k1-wD-WmH"/>
-                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="leading" secondItem="4lD-ct-Xvc" secondAttribute="leading" id="2H5-vd-hNn"/>
-                            <constraint firstItem="00D-86-m0v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="82a-LT-OU8"/>
-                            <constraint firstItem="00D-86-m0v" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Ks3-IV-vcI"/>
-                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="trailing" secondItem="4lD-ct-Xvc" secondAttribute="trailing" id="Mxk-EQ-xXm"/>
-                            <constraint firstItem="00D-86-m0v" firstAttribute="top" secondItem="4lD-ct-Xvc" secondAttribute="bottom" constant="53" id="QCe-7o-yra"/>
-                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="53" id="aBb-fy-5ay"/>
-                            <constraint firstItem="4lD-ct-Xvc" firstAttribute="top" secondItem="dZ4-Ox-4TG" secondAttribute="bottom" constant="26" id="cAz-a9-Lwv"/>
-                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="dsj-fx-Ge4"/>
-                            <constraint firstItem="4lD-ct-Xvc" firstAttribute="centerX" secondItem="00D-86-m0v" secondAttribute="centerX" id="myH-5x-ItZ"/>
+                            <constraint firstItem="TLp-Nb-DoJ" firstAttribute="top" secondItem="00D-86-m0v" secondAttribute="bottom" constant="27" id="B8z-5G-ipZ"/>
+                            <constraint firstItem="TLp-Nb-DoJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="170" id="F4C-d9-OuE"/>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="53" id="GBi-eF-uzY"/>
+                            <constraint firstItem="4lD-ct-Xvc" firstAttribute="top" secondItem="dZ4-Ox-4TG" secondAttribute="bottom" constant="26" id="WZA-qL-q0F"/>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="115" id="b4g-lX-vcO"/>
+                            <constraint firstItem="4lD-ct-Xvc" firstAttribute="centerX" secondItem="00D-86-m0v" secondAttribute="centerX" id="lqy-be-TZN"/>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="leading" secondItem="4lD-ct-Xvc" secondAttribute="leading" id="n6u-Nl-clO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TLp-Nb-DoJ" secondAttribute="bottom" constant="14" id="ozz-Dg-gth"/>
+                            <constraint firstItem="00D-86-m0v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="piq-QA-ANK"/>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rdb-XA-nHu"/>
+                            <constraint firstItem="00D-86-m0v" firstAttribute="centerX" secondItem="TLp-Nb-DoJ" secondAttribute="centerX" id="rgG-t3-M0f"/>
+                            <constraint firstItem="dZ4-Ox-4TG" firstAttribute="trailing" secondItem="4lD-ct-Xvc" secondAttribute="trailing" id="sWb-or-0F0"/>
+                            <constraint firstItem="00D-86-m0v" firstAttribute="top" secondItem="4lD-ct-Xvc" secondAttribute="bottom" constant="53" id="uFY-xd-gCg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="VmO-p4-2lg"/>
                     <connections>
                         <outlet property="commentText" destination="4lD-ct-Xvc" id="EHy-zg-VBa"/>
                         <outlet property="mapView" destination="00D-86-m0v" id="elF-AC-pWT"/>
@@ -52,7 +98,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="126.5625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="kiF-L3-8gU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="me8-mG-sXT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iIB-Cb-RwI">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tlg-kM-BA9" kind="relationship" relationship="rootViewController" id="Jbx-yf-a5X"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BM4-fO-yoP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-613.04347826086962" y="84.375"/>
         </scene>
     </scenes>
 </document>
